2009-08-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in, configure.ac, NEWS:
	  Updated to the new 0.5.2 release.

2009-08-13 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/commands.c: Fixed the broken state that the AVR
	  devices were in due to not selecting the correct memory
	  page prior to flashing.  Broke apart the
	  eeprom/flash/user page flashing/dumping into separate
	  functions so the maintenance will be easier.  Cleaned
	  up the address ranges so they are consistent across
	  memory types.  Fixed some debug statements that should
	  have been going to stderr instead of stdout that made
	  the output of a dump garbled.  Cleaned up some more
	  off by 1 errors that were in the dump functionality.
	  Verified my changes on my AVR32 and AVR boards.

2009-05-31 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a memory address identification bug
	  that would cause the value 0xff to not be recognized.
	* src/commands.c, AUTHORS: Applied the patch that Xavier
	  Leprevost created to allow dumping avr32 user flash
	  properly.

2009-05-23 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a buffer overrun error that would
	  cause a core dump sometimes.

2009-04-30 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/atmel.h, src/commands.c, AUTHORS: Applied the
	  patch from Zachary Clifford to enable all the AVR32
	  fuses to be set or gotten (all BOD fuse setting is
	  disabled for device safety since they can brick your
	  device.)

2009-04-29 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/atmel.c: Fix the off by one issue
	  Brad pointed out for blank checking.  Fix a bug in the
	  blank checking for devices with greater than 65k of
	  memory that were not AVR32 based, so that all the